--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,4 @@ API_KEY_INDEX=your_api_key_index
 
 # The interval in minutes to restart the market maker
 RESTART_INTERVAL_MINUTES=5
+MARKET_SYMBOL=PAXG
