--- a/.env.example
+++ b/.env.example
@@ -9,4 +9,6 @@ API_KEY_INDEX=your_api_key_index
 
 # The interval in minutes to restart the market maker
 RESTART_INTERVAL_MINUTES=5
+
+# Symbol to use (it is not enough to just modify it here, check CRYPTO_CONFIGURATION.md)
 MARKET_SYMBOL=PAXG
