--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
-websockets
 git+https://github.com/elliottech/lighter-python.git
+python-dotenv
 numpy
 pandas
 scipy
 numba
-python-dotenv
+websockets
+requests
+eth-account
 arch
 matplotlib
+argparse
