--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,8 @@ services:
       - ./gather_lighter_data.py:/app/gather_lighter_data.py:ro
       - ./calculate_avellaneda_parameters.py:/app/calculate_avellaneda_parameters.py:ro
       - ./market_maker.py:/app/market_maker.py:ro
-      - ./.env:/app/.env:ro
+    env_file:
+      - .env
     environment:
       - PYTHONUNBUFFERED=1
       - LOG_DIR=/app/logs
@@ -32,7 +33,6 @@ services:
       - ./logs:/app/logs
       - ./params:/app/params
       - ./calculate_avellaneda_parameters.py:/app/calculate_avellaneda_parameters.py:ro
-      - ./.env:/app/.env:ro
     env_file:
       - .env
     environment:
@@ -40,13 +40,14 @@ services:
       - HL_DATA_LOC=/app/lighter_data
       - PARAMS_DIR=/app/params
       - LOG_DIR=/app/logs
+      - INTERVAL_SECONDS=600
     command: >
       sh -c "
         while true; do
           echo 'Calculating Avellaneda parameters...';
-          python calculate_avellaneda_parameters.py ${MARKET_SYMBOL:-PAXG} --minutes 10;
+          python calculate_avellaneda_parameters.py $$MARKET_SYMBOL --minutes 10;
           echo 'Sleeping before next run...';
-          sleep 600;
+          sleep $$INTERVAL_SECONDS;
         done
       "
     depends_on:
@@ -61,7 +62,6 @@ services:
       - ./params:/app/params
       - ./logs:/app/logs
       - ./find_trend_lighter.py:/app/find_trend_lighter.py:ro
-      - ./.env:/app/.env:ro
     env_file:
       - .env
     environment:
@@ -72,7 +72,7 @@ services:
       sh -c "
         while true; do
           echo 'Running supertrend calculator...';
-          python find_trend_lighter.py --symbol ${MARKET_SYMBOL:-PAXG} --interval 1m;
+          python find_trend_lighter.py --symbol $$MARKET_SYMBOL --interval 5m;
           echo 'Sleeping for 2 minutes...';
           sleep 120;
         done
@@ -89,20 +89,19 @@ services:
       - ./params:/app/params:ro
       - ./logs:/app/logs
       - ./market_maker.py:/app/market_maker.py:ro
-      - ./.env:/app/.env:ro
     env_file:
       - .env
     environment:
       - PYTHONUNBUFFERED=1
       - PARAMS_DIR=/app/params
       - LOG_DIR=/app/logs
+      - RESTART_SECONDS=60
     command: >
       sh -c "
         while true; do
           echo 'Starting market maker...';
-          python market_maker.py --symbol ${MARKET_SYMBOL:-PAXG};
-          echo 'Restarting in 10 seconds...';
-          sleep 10;
+          python market_maker.py --symbol $$MARKET_SYMBOL;
+          sleep $$RESTART_SECONDS;
         done
       "
     depends_on:
